adding citations, tables, captions

--- a/ch0-introduction/document.tex
+++ b/ch0-introduction/document.tex
@@ -7,8 +7,6 @@ In this dissertation, I use direct, tree-level measurements of water use to show
 
 \section{Background}
 
-In this introduction, I present background information on important concepts underpinning the rest of the dissertation: land surface energy balance, and stomatal control of transpiration.
-
 \subsection{Land surface energy balance}
 
 The land surface gains energy by absorbing radiation from the sun (higher frequency radiation, or ``short wave'') and from the atmosphere (lower frequency, or ``long wave'').  This energy gain is balanced by energy loss through emitted thermal radiation (``outgoing long wave''), conductive heat flux into the ground, and two types of turbulent heat fluxes.  These turbulent heat fluxes are (1) ``sensible heat'', or convective eddies carrying warmer air away from a hot land surface; and (2) ``latent heat'', which in atmospheric science refers to turbulent eddies carrying evaporated water vapor away from the land surface.  This evaporative flux is equivalent to an energy flux because the process of converting water from liquid to vapor consumes a large amount of energy; that energy is released later when the water vapor condenses, making the energy in water vapor ``latent''.
@@ -17,7 +15,7 @@ Typical values for these fluxes are XX (from exit seminar).  XX amount of energy
 
 \subsection{Plant control of transpiration}
 
-Transpiration occurs because plants must open their stomata (approximately 10 $\mu$m-scale pores in their leaves) in order to take in carbon dioxide for photosynthesis, and in the process, water from the wet interior of the leaf evaporates and exits the stomata.  Thus plants (especially those with the C3 carbon fixation pathway) must continually balance the gain of carbon dioxide against the loss of water, particularly in water-limited ecosystems.  Plants actively control the openness of their stomata in order to optimize this balance.  The rate of water loss depends on the stomatal conductivity ($g_s$, a measure of openness) and on the difference in vapor pressure between the interior of the leaf and the outside air (measured by vapor pressure deficit, or VPD):
+Transpiration occurs because plants must open their stomata (approximately 10 $\mu$m-scale pores on the surface of leaves) in order to take in carbon dioxide for photosynthesis, and in the process, water from the wet interior of the leaf evaporates and exits the stomata.  Thus plants (especially those with the C3 carbon fixation pathway) must continually balance the gain of carbon dioxide against the loss of water, particularly in water-limited ecosystems.  Plants actively control the openness of their stomata in order to optimize this balance.  The rate of water loss depends on the stomatal conductivity ($g_s$, a measure of openness) and on the difference in vapor pressure between the interior of the leaf and the outside air (measured by vapor pressure deficit, or VPD):
 
 \begin{equation}
 E = g_s * VPD
@@ -45,6 +43,10 @@ Another methodological contribution of this dissertation is the integration of s
 
 Chapter \ref{c.wind} of this dissertation applies the modeling of evapotranspiration-atmosphere interactions to a new use: wind energy forecasting.  I show that soil moisture errors of a magnitude known to exist in reanalysis datasets can influence wind energy forecasts at one California wind farm in an operationally significant way.  The study's systematic perturbation of soil moisture in an atmospheric model, and its mechanistic analysis of wind response, establish a prototype for similar studies at other wind farms.  Such studies could support measurement campaigns and data assimilation to improve wind energy forecast accuracy.
 
-Conclusion (?)
+\section{Future work}
 
-What questions remain?  Where tree species are accessing water (deeper roots?  pulling harder?) Connected to this, what effect on streamflow?  Generalizing across regions, aspects, slopes, geologies - methodological difficulty of sampling enough places, and enough species, what common behaviors can we aggregate at classifications broader that the species level.  How will species distribution in the Northern California Coast Range respond to a warmer climate (will there be more droughts? if so, how will each species cope with the particular types of those droughts, length and intensity), interacting with human-influenced fire regime and other management practices?
+This work raises new questions about the effects of species differences in water use strategies on watersheds and the atmosphere.  First, where do Douglas firs and Pacific madrones (two species with very different water use patterns) access subsurface water, and do they tap into distinct water stores?  There is some evidence that Pacific madrones, which transpire maximally in the summer dry season, may have access to both deeper water, via deeper roots than Douglas firs, and more tightly bound water, by pulling harder, i.e. reaching lower water potentials (Chapter \ref{c.sapflow} Discussion).  Understanding species differences in subsurface water access is essential for a mechanistic understanding of water movement through the subsurface-vegetation-atmosphere system.  Such a mechanistic understanding will enable informed projections of the effect of changes in species abundance on streamflow (to what extent does each species tap into reservoirs that contribute to summertime baseflow?) and the resilience of each species to longer and more intense future droughts (what will happen to each species's water store in such droughts?  Is deeper water more protected from depletion during drought, and does it thus confer resilience on deep-rooted species?)
+
+Connected to ongoing research about tree mortality in response to drought.  Causes of tree mortality, and relative importance of carbon starvation vs. hydraulic failure, are still debated.  Future work should investigate how the different hydraulic strategies employed by Douglas firs and Pacific madrones make them more or less susceptible to drought-induced mortality.  How will species distribution in the Northern California Coast Range respond to a warmer climate (will there be more droughts? if so, how will each species cope with the particular types of those droughts, length and intensity), interacting with human-influenced fire regime and other management practices?
+
+A major challenge in evapotranspiration research is heterogeneity and scaling up from local-scale measurements.  Generalizing across regions, aspects, slopes, geologies - methodological difficulty of sampling enough places, and enough species, what common behaviors can we aggregate at classifications broader that the species level.  
