--- a/ch1-sapflow/discussion/discussion.tex
+++ b/ch1-sapflow/discussion/discussion.tex
@@ -1,7 +1,7 @@
 \section{Discussion}
 
 \subsection{Species difference in response to \textit{VPD} and $\theta$}
-Evergreen tree species that coexist on this small hillslope transpire maximally during different seasons.  This difference in transpiration seasonality is due to the species-specific sensitivities of transpiration to atmospheric evaporative demand and subsurface water supply.  Douglas-fir transpiration reaches near-maximum values on clear-sky days in the rainy spring when relative soil moisture exceeds a threshold of $\sim$0.3 even when \textit{VPD} is low (around 1 kPa), and Douglas-fir transpiration declines sharply with the low surface soil moisture conditions of the dry summer.  In contrast, Pacific madrone, live oak, bay, and tanoak transpiration increases continually with increasing \textit{VPD}, reaching maximal transpiration values when atmospheric evaporative demand is highest in the summer dry season; in addition, the low moisture in the upper 50 cm of soil in the summer dry season does not suppress Pacific madrone transpiration and suppresses the other broadleaf species to a lesser degree than it does Douglas-fir.  As a result, Douglas-firs have highest transpiration on clear days in spring, while broadleaf species, and especially Pacific madrones, have highest transpiration on summer days with high atmospheric demand (Figure 4).  The Douglas-fir seasonal pattern is consistent with other studies [\cite{jassal2009evapotranspiration}; \cite{moore2004structural}; \cite{granier1987evaluation}]; no studies of Pacific madrone transpiration seasonal patterns were found in the literature.
+Evergreen tree species that coexist on this small hillslope transpire maximally during different seasons.  This difference in transpiration seasonality is due to the species-specific sensitivities of transpiration to atmospheric evaporative demand and subsurface water supply.  Douglas-fir transpiration reaches near-maximum values on clear-sky days in the rainy spring when relative soil moisture exceeds a threshold of $\sim$0.3 even when \textit{VPD} is low (around 1 kPa), and Douglas-fir transpiration declines sharply with the low surface soil moisture conditions of the dry summer.  In contrast, Pacific madrone, live oak, bay, and tanoak transpiration increases continually with increasing \textit{VPD}, reaching maximal transpiration values when atmospheric evaporative demand is highest in the summer dry season; in addition, the low moisture in the upper 50 cm of soil in the summer dry season does not suppress Pacific madrone transpiration and suppresses the other broadleaf species to a lesser degree than it does Douglas-fir.  As a result, Douglas-firs have highest transpiration on clear days in spring, while broadleaf species, and especially Pacific madrones, have highest transpiration on summer days with high atmospheric demand (Figure \ref{fig:sapflow_normvel}).  The Douglas-fir seasonal pattern is consistent with other studies [\cite{jassal2009evapotranspiration}; \cite{moore2004structural}; \cite{granier1987evaluation}]; no studies of Pacific madrone transpiration seasonal patterns were found in the literature.
 
 Sensitivity to \textit{I} also differed between Douglas-firs and the broadleaf species: broadleaf transpiration showed a greater relative increase with increasing \textit{I} than did Douglas-fir transpiration. This species difference might arise in part because, although the parameters are estimated with open-field \textit{I}, trees of different heights on this north-facing slope actually have different access to \textit{I}. Large Douglas-firs (up to 50-60 m tall) generally have greater \textit{I} access than understorey broadleaf trees (20-30 m tall).  Thus, during low \textit{I} times such as mornings or winter days, the large Douglas-firs might have sufficient \textit{I} for photosynthesis and transpiration, while understorey trees might not.
 
@@ -10,17 +10,17 @@ It remains uncertain how the broadleaf species and especially Pacific madrones, 
 
 We speculate that Pacific madrones may also have higher leaf area during the summer.  Pacific madrone leaves have a lifespan of 14.7 months [\cite{ackerly2004functional}], meaning that if new leaves emerge at approximately the same time, then for a two- to three-month period each year, the trees might have twice their normal leaf area.  Informal observations at our site indicate that Pacific madrones drop leaves in late summer, so mid-summer may be the high-leaf-area period.  When the leaf area is higher, whole tree transpiration could increase even if transpiration per leaf stayed the same or declined, provided that water stress were not extreme.
 
-Interestingly, Douglas-fir trees at our site do not seem to use groundwater to alleviate water stress during the dry season.  Tree 5, a large Douglas-fir downslope where the water table is $\sim$5 m below ground year-round, declined at a similar rate to upslope Douglas-firs in the dry season (similar soil moisture parameters in Table A2).  Like the instrumented upslope Douglas-firs, tree 5 rebounded strongly with the onset of the rainy season, suggesting water limitation during the dry season until unsaturated zone moisture was replenished by rains.
+Interestingly, Douglas-fir trees at our site do not seem to use groundwater to alleviate water stress during the dry season.  Tree 5, a large Douglas-fir downslope where the water table is $\sim$5 m below ground year-round, declined at a similar rate to upslope Douglas-firs in the dry season (similar soil moisture parameters in Table \ref{tbl:sapflow_mcmc}).  Like the instrumented upslope Douglas-firs, tree 5 rebounded strongly with the onset of the rainy season, suggesting water limitation during the dry season until unsaturated zone moisture was replenished by rains.
 
 \subsection{Implications of Douglas-fir water stress}
-Douglas-firs' sap flow declined through the dry season in all three years, but the timing of onset of the decline varied between years, corresponding to the timing of moisture decline in the top 50 cm of soil (Figure 9).  The timing of surface soil moisture decline, in turn, seems to depend on the timing of late spring precipitation (Figure 3).  Excess rain during the winter and early spring that exceeds the storage capacity of the soil will run off and have little influence on summer soil moisture availability, but rain in the late spring has the potential to refill a partially empty upper soil reservoir and sustain soil moisture further into the dry season.  Thus, the timing of late spring precipitation is important for sustaining Douglas-fir transpiration through the dry season.  As long as late spring storms meet a certain threshold quantity, their timing may matter more than total wet season precipitation for Douglas-fir function in the dry season.
+Douglas-firs' sap flow declined through the dry season in all three years, but the timing of onset of the decline varied between years, corresponding to the timing of moisture decline in the top 50 cm of soil (Figure \ref{fig:sapflow_interannual}).  The timing of surface soil moisture decline, in turn, seems to depend on the timing of late spring precipitation (Figure \ref{fig:sapflow_met}).  Excess rain during the winter and early spring that exceeds the storage capacity of the soil will run off and have little influence on summer soil moisture availability, but rain in the late spring has the potential to refill a partially empty upper soil reservoir and sustain soil moisture further into the dry season.  Thus, the timing of late spring precipitation is important for sustaining Douglas-fir transpiration through the dry season.  As long as late spring storms meet a certain threshold quantity, their timing may matter more than total wet season precipitation for Douglas-fir function in the dry season.
 
-Douglas-firs may be encroaching on areas formerly dominated by Pacific madrone and other broadleafs in the ACRR, due to a fire-regime shift from controlled burning by indigenous people and early European settlers, to fire suppression in the 20th century [\cite{johnsonACRR}].  If Douglas-firs become more prevalent, their suppressed transpiration in the dry season could decrease the regional summertime evapotranspiration (Figure 10) and might increase the land surface temperature in the dry season [Chapter \ref{c.BL}].  California Coast Range forests with a greater proportion of Douglas fir might also be less resilient to drought, if the Douglas-firs' decline in stomatal conductance reduced whole-tree carbon balance and thus increased sensitivity to subsequent drought events [\cite{mcdowell2008mechanisms}].
+Douglas-firs may be encroaching on areas formerly dominated by Pacific madrone and other broadleafs in the ACRR, due to a fire-regime shift from controlled burning by indigenous people and early European settlers, to fire suppression in the 20th century [\cite{johnsonACRR}].  If Douglas-firs become more prevalent, their suppressed transpiration in the dry season could decrease the regional summertime evapotranspiration (Figure \ref{fig:sapflow_regional}) and might increase the land surface temperature in the dry season [Chapter \ref{c.BL}].  California Coast Range forests with a greater proportion of Douglas fir might also be less resilient to drought, if the Douglas-firs' decline in stomatal conductance reduced whole-tree carbon balance and thus increased sensitivity to subsequent drought events [\cite{mcdowell2008mechanisms}].
 
 \subsection{Comparison with previous observations}
-Our bottom-up estimate of transpiration agrees generally with the MODIS-derived top-down estimates at the scale of the Eel River watershed (Figure 10).  However, there are important differences in the dry season: we estimate notably lower transpiration in August and September than does the MODIS remote sensing method (Figure 11).  It is unlikely that the difference could be due to soil evaporation unaccounted for in the sap flow method, because surface soils are very dry in the late dry season.  It is possible that other conifer species in the watershed, such as redwood and pine species, have less stomatal closure than Douglas-fir at low soil moisture values, and that our method underestimates transpiration by these other species.  However, \textit{Pinaceae} tend to use water conservatively because they are vulnerable to embolism [\cite{martinez2004hydraulic}], suggesting that pine species in this region, which make up much of the ``other conifer'' category in Figure 4, would be likely to close their stomata under dry soil conditions like Douglas-firs do.  It is also possible that the FIA inventory underestimates the contribution of broadleaf species like Pacific madrone that transpire heavily in the dry season.  Certainly, broadleaf evergreens dominate transpiration locally on certain hillslopes: the species distribution is highly spatially patterned in the Elder Creek and Eel River watersheds, with broadleaf evergreen trees predominant on south-facing slopes and ridges, and Douglas-firs predominant on north-facing slopes and in valleys [Collin Bode and William Dietrich, personal communication].  As such, south-facing slopes may have higher dry season transpiration than north-facing slopes, creating structured spatial variability in dry season transpiration.  Finally, the MODIS algorithm, which uses remotely sensed LAI and reanalysis meteorology to drive a Penman-Monteith model [\cite{mu2007development}], may not accurately account for Douglas-fir stomatal closure when soils are dry, because the MODIS algorithm does not incorporate soil moisture information.  Comparison with ET measured by flux towers suggests that the MODIS-derived annual cycle of ET for Mediterranean sites contains large errors [\cite{vinukollu2010global}; one flux tower located in the Sierra Nevada foothills oak savanna and one on the western slope of the Sierra Nevada in a mixed-evergreen coniferous forest].
+Our bottom-up estimate of transpiration agrees generally with the MODIS-derived top-down estimates at the scale of the Eel River watershed (Figure \ref{fig:sapflow_regional}).  However, there are important differences in the dry season: we estimate notably lower transpiration in August and September than does the MODIS remote sensing method (Figure \ref{fig:sapflow_ratio}).  It is unlikely that the difference could be due to soil evaporation unaccounted for in the sap flow method, because surface soils are very dry in the late dry season.  It is possible that other conifer species in the watershed, such as redwood and pine species, have less stomatal closure than Douglas-fir at low soil moisture values, and that our method underestimates transpiration by these other species.  However, \textit{Pinaceae} tend to use water conservatively because they are vulnerable to embolism [\cite{martinez2004hydraulic}], suggesting that pine species in this region, which make up much of the ``other conifer'' category in Figure \ref{fig:sapflow_abundances}, would be likely to close their stomata under dry soil conditions like Douglas-firs do.  It is also possible that the FIA inventory underestimates the contribution of broadleaf species like Pacific madrone that transpire heavily in the dry season.  Certainly, broadleaf evergreens dominate transpiration locally on certain hillslopes: the species distribution is highly spatially patterned in the Elder Creek and Eel River watersheds, with broadleaf evergreen trees predominant on south-facing slopes and ridges, and Douglas-firs predominant on north-facing slopes and in valleys [Collin Bode and William Dietrich, personal communication].  As such, south-facing slopes may have higher dry season transpiration than north-facing slopes, creating structured spatial variability in dry season transpiration.  Finally, the MODIS algorithm, which uses remotely sensed LAI and reanalysis meteorology to drive a Penman-Monteith model [\cite{mu2007development}], may not accurately account for Douglas-fir stomatal closure when soils are dry, because the MODIS algorithm does not incorporate soil moisture information.  Comparison with ET measured by flux towers suggests that the MODIS-derived annual cycle of ET for Mediterranean sites contains large errors [\cite{vinukollu2010global}; one flux tower located in the Sierra Nevada foothills oak savanna and one on the western slope of the Sierra Nevada in a mixed-evergreen coniferous forest].
 
-We note that our estimates also agree with measurements of similar sites made with a variety of methods.  \cite{salve2012rain} used a water balance to calculate an annual ET at Rivendell (excluding interception losses) of 300-500 mm and summer (June-September) ET  of up to 200 mm.  Our estimate using the realistic species distribution and the first radial velocity profile (blue line in Figure 10, top row) gives annual transpiration of 350-410 mm and June-September transpiration of 150-180 mm.  At a wetter Douglas-fir site in British Columbia using the eddy flux method, \cite{jassal2009evapotranspiration} measured similar spring and early summer monthly ET (50-70 mm/month), although late summer ET was greater at the wetter British Columbia site than at Rivendell.  At a Douglas-fir site in western Oregon, \cite{moore2004structural} used sap flow scaling to estimate Douglas-fir dry season transpiration of 0.5-2.5 mm/day, depending on tree age and time within the dry season; these rates bracket our dry season estimates (top left panel of Figure 10.)  In addition, measurements of oak transpiration at a Mediterranean site agree with the oak sap velocities we measured (\cite{fisher2007towers} measured peak sap velocities around 6 cm/hr) and the transpiration rates we estimate (\cite{chen2008observations} report oak tree transpiration of 2-4 mm/day in early- to mid-summer.)
+We note that our estimates also agree with measurements of similar sites made with a variety of methods.  \cite{salve2012rain} used a water balance to calculate an annual ET at Rivendell (excluding interception losses) of 300-500 mm and summer (June-September) ET  of up to 200 mm.  Our estimate using the realistic species distribution and the first radial velocity profile (blue line in Figure \ref{fig:sapflow_regional}, top row) gives annual transpiration of 350-410 mm and June-September transpiration of 150-180 mm.  At a wetter Douglas-fir site in British Columbia using the eddy flux method, \cite{jassal2009evapotranspiration} measured similar spring and early summer monthly ET (50-70 mm/month), although late summer ET was greater at the wetter British Columbia site than at Rivendell.  At a Douglas-fir site in western Oregon, \cite{moore2004structural} used sap flow scaling to estimate Douglas-fir dry season transpiration of 0.5-2.5 mm/day, depending on tree age and time within the dry season; these rates bracket our dry season estimates (top left panel of Figure \ref{fig:sapflow_regional}.)  In addition, measurements of oak transpiration at a Mediterranean site agree with the oak sap velocities we measured (\cite{fisher2007towers} measured peak sap velocities around 6 cm/hr) and the transpiration rates we estimate (\cite{chen2008observations} report oak tree transpiration of 2-4 mm/day in early- to mid-summer.)
 
 \subsection{Uncertainties and limitations}
 \label{sec:sapflow_soilmoisture}
@@ -36,7 +36,7 @@ In treating sap velocity as proportional to transpiration, we assume that (1) th
 Similarly, in converting heat pulse velocity to sap velocity, we treat xylem water content as constant through the year, but xylem water content, especially in Douglas-fir [\cite{waring1978sapwood}], may decline during long dry periods.  Our water content measurements were made at the end of the dry season and were thus probably a lower bound.  According to Equation 7 in \cite{burgess2001improved}, an underestimation of water content in the wet season would result in an underestimation of sap velocity during the wet season.
 
 \subsubsection{Regional estimate of transpiration}
-We have estimated regional transpiration in order to demonstrate the potential for species differences in response to $VPD$ and $\theta$ to influence transpiration at a regional scale.  The estimate required several simplifying assumptions.  First, species recorded in the FIA dataset were grouped into broad categories of needleleaf and broadleaf, both in order to estimate the maximum potential impact of Pacific-madrone-like behavior in broadleafs and also to accommodate species not measured at the Rivendell site.  This coarse categorization could and should be improved if additional species (especially the common conifers) are instrumented in the future.  Second, the sapwood thickness - DBH relationship is poorly constrained for species other than Douglas-fir (our Pacific madrone relationship was based on only 6 samples, and samples were not collected from other broadleaf species at the site because the hardness of the wood made it prohibitively difficult with the available equipment).  This allometric relationship is expected to vary between sites, species, and trees of different ages [\cite{eamus}, p. 42]; as such, this relationship is a significant source of uncertainty in our regional estimate.  Similarly, the radial profile of sap velocity is another significant source of uncertainty, and we attempt to quantify this uncertainty by producing three regional estimates, using three reasonable radial velocity profiles (Figure 10.)  However, any errors due to sapwood thickness and radial velocity profile would not change the seasonality of the transpiration estimates, only the magnitude.
+We have estimated regional transpiration in order to demonstrate the potential for species differences in response to $VPD$ and $\theta$ to influence transpiration at a regional scale.  The estimate required several simplifying assumptions.  First, species recorded in the FIA dataset were grouped into broad categories of needleleaf and broadleaf, both in order to estimate the maximum potential impact of Pacific-madrone-like behavior in broadleafs and also to accommodate species not measured at the Rivendell site.  This coarse categorization could and should be improved if additional species (especially the common conifers) are instrumented in the future.  Second, the sapwood thickness - DBH relationship is poorly constrained for species other than Douglas-fir (our Pacific madrone relationship was based on only 6 samples, and samples were not collected from other broadleaf species at the site because the hardness of the wood made it prohibitively difficult with the available equipment).  This allometric relationship is expected to vary between sites, species, and trees of different ages [\cite{eamus}, p. 42]; as such, this relationship is a significant source of uncertainty in our regional estimate.  Similarly, the radial profile of sap velocity is another significant source of uncertainty, and we attempt to quantify this uncertainty by producing three regional estimates, using three reasonable radial velocity profiles (Figure \ref{fig:sapflow_regional}.)  However, any errors due to sapwood thickness and radial velocity profile would not change the seasonality of the transpiration estimates, only the magnitude.
 
 Finally, in using small-scale measurements to estimate the behavior of trees at the regional scale, we neglect heterogeneity among hillslopes.  Our regional estimate does not account for heterogeneous meteorology and water availability, or for variation in response between trees in different locations due to, for instance, genetics, climate during growth, or age distribution.  More sap flow and micrometeorological measurements at different sites within the Eel River watershed, as well remotely sensed observations of vegetation, could integrate such heterogeneity and improve the accuracy of the regional estimate.
 
