--- a/ch2-BL/methods/methods.tex
+++ b/ch2-BL/methods/methods.tex
@@ -5,7 +5,7 @@ We use two atmospheric models to estimate the atmospheric changes: the first is 
 In both models, we use the stomatal response parameters for soil moisture and $VPD$ derived in the previous chapter to calculate stomatal conductance and thus latent heat flux.  Tests with each model are conducted over a range of soil moisture values and synoptic conditions typical of August in the northern California Coast Range.  We quantify the differences in surface temperature, near-surface air temperature, boundary layer depth, and near-surface humidity between a hypothetical all-Douglas-fir forest and a hypothetical all-Pacific-madrone forest.
 
 \subsection{1-D model}
-The 1-D model [\textit{Tennekes and Driedonks}, 1981; \textit{Garratt}, 1992; \textit{Siqueira et al.}, 2009] simulates the evolution of boundary layer height, potential temperature, and humidity, given surface fluxes and free troposphere conditions.  The boundary layer is assumed to be well mixed, with uniform potential temperature ($\Theta$, Kelvin) and specific humidity ($Q$, g/kg), and to be capped by a temperature inversion represented by a step change, as shown in Figure 2 from \textit{Siqueira et al.} [2009].  The height of the boundary layer, $h$ (m), is assumed to grow due to buoyant convection only, in such a way that the entrainment heat flux at the top of the boundary layer is a fixed fraction of the sensible heat flux at the land surface (as in \textit{Garratt} [1992], Section 6.1.5.)  Because the model is 1-D, it assumes horizontal homogeneity, meaning no lateral variation in surface fluxes or properties and no net horizontal advection.
+The 1-D model [\cite{tennekes1981basic}; \textit{Garratt}, 1992 XXXX; \cite{Siqueira:2009qf}] simulates the evolution of boundary layer height, potential temperature, and humidity, given surface fluxes and free troposphere conditions.  The boundary layer is assumed to be well mixed, with uniform potential temperature ($\Theta$, Kelvin) and specific humidity ($Q$, g/kg), and to be capped by a temperature inversion represented by a step change, as shown in Figure 2 from \cite{Siqueira:2009qf}.  The height of the boundary layer, $h$ (m), is assumed to grow due to buoyant convection only, in such a way that the entrainment heat flux at the top of the boundary layer is a fixed fraction of the sensible heat flux at the land surface (as in \textit{Garratt} [1992] XXXX, Section 6.1.5.)  Because the model is 1-D, it assumes horizontal homogeneity, meaning no lateral variation in surface fluxes or properties and no net horizontal advection.
 
 The evolution of $h$ is modeled as
 
@@ -40,15 +40,15 @@ where $E$ is surface evapotranspiration (g/m$^2$/s), $\Delta\Theta$ (K) is the j
 \end{equation}
 where $\Gamma_Q$ is the lapse rate of water vapor above the mixed layer.
 
-$E$ is the sum of transpiration ($E_t$) and soil evaporation ($E_{soil}$); evaporation of intercepted canopy water is negligible during the dry season days considered here.  $E_t$ is simulated following the procedure in Chapter XX, Section XX: normalized sap velocity at the outer edge of the sapwood ($v_n$, ranging from 0 to 1) is predicted with a Jarvis model for stomatal conductance [REF] with parameters estimated from sap flow measurements (species-averaged parameters in Table XX), and $v_n$ is scaled up to regional transpiration using the observed Douglas fir tree-diameter--sapwood-depth relationship (Equation XX) and an FIA-derived tree size distribution [REF, all-species distribution, black line in Ch XX Figure XX].  The Douglas fir sapwood depth relation is used for both the Douglas fir and Pacific madrone model runs in order to eliminate variation due to sapwood area and focus on variation due to stomatal response.
+$E$ is the sum of transpiration ($E_t$) and soil evaporation ($E_{soil}$); evaporation of intercepted canopy water is negligible during the dry season days considered here.  $E_t$ is simulated following the procedure in Section \ref{sec:sapflow_regmeth}: normalized sap velocity at the outer edge of the sapwood ($v_n$, ranging from 0 to 1) is predicted with a Jarvis model for stomatal conductance [\cite{jarvis1976interpretation}] with parameters estimated from sap flow measurements (species-averaged parameters in Table \ref{tbl:sapflow_maxvel}), and $v_n$ is scaled up to regional transpiration using the observed Douglas fir tree-diameter--sapwood-depth relationship (Equation \ref{eqn:sapwood}`) and an FIA-derived tree size distribution [\textit{Woudenberg et al.}, 2010 XXXX, all-species distribution, black line in Figure \ref{fig:sapflow_abundances}].  The Douglas fir sapwood depth relation is used for both the Douglas fir and Pacific madrone model runs in order to eliminate variation due to sapwood area and focus on variation due to stomatal response.
 
-Soil evaporation is estimated using a simplified version of the CLM model soil evaporation scheme [\textit{Oleson et al.}, 2010]:
+Soil evaporation is estimated using a simplified version of the CLM model soil evaporation scheme [\cite{oleson2010technical}]:
 \begin{equation}
 E_{soil} = \frac{-\beta_{soi}(q_{air}-q_{ground})}{r_{aw}+r_{litter}},
 \end{equation}
-where $\beta_{soi}$ is a reduction factor based on soil moisture (Equation 5.68 in \textit{Oleson et al.} [2010] with $\theta_{fc,1}=0.15$), $q_{air}$ is the specific humidity of the air (g/kg), $q_{ground}$ is the saturation specific humidity at ground temperature (g/kg), $r_{aw}$ is the resistance to water vapor transfer from the ground to the canopy air space (Equation 5.99 in \textit{Oleson et al.} [2010] with $C_s=0.004$ and $u_*=0.4$ m/s), and $r_{litter}$ is the resistance to water vapor transfer through the litter layer (Equation 5.106 in \textit{Oleson et al.} [2010] with $L^{eff}_{litter}=0.5$ m$^2$/m$^2$).
+where $\beta_{soi}$ is a reduction factor based on soil moisture (Equation 5.68 in \cite{oleson2010technical} with $\theta_{fc,1}=0.15$), $q_{air}$ is the specific humidity of the air (g/kg), $q_{ground}$ is the saturation specific humidity at ground temperature (g/kg), $r_{aw}$ is the resistance to water vapor transfer from the ground to the canopy air space (Equation 5.99 in \cite{oleson2010technical} with $C_s=0.004$ and $u_*=0.4$ m/s), and $r_{litter}$ is the resistance to water vapor transfer through the litter layer (Equation 5.106 in \cite{oleson2010technical} with $L^{eff}_{litter}=0.5$ m$^2$/m$^2$).
 
-Incoming radiation is prescribed using typical values for August in this region.  For incoming solar radiation ($S_{down}$), we use the average diurnal course of total solar radiation measured at an open meadow station at the Angelo Coast Range Reserve (ACRR) on August 15 of 2009-2011.  For downward longwave radiation ($L_{down}$), we use the GEWEX Surface Radiation Budget [Stackhouse \textit{et al.}, 2011] mean diurnal pattern from the month of August (years 2003-2007) for the grid cell nearest the ACRR field site.  Shortwave albedo is set to 0.1 and longwave emissivity is set to 0.95 for both species in order to eliminate variation due to vegetation radiative properties (0.1 is the albedo and XX is the emissivity for broadleaf evergreen temperate trees in CLM [Oleson \textit{et al.}, 2010].)  Ground heat flux is set equal to 5\% of net radiation [Og\'{e}e \textit{et al.}, 2001].  Aerodynamic resistance ($r_a$) is held constant at 10 s/m, which is a representative value for typical winds and near neutral conditions using Equation 14.33 from Bonan (2008); this particular value was chosen to give surface and air temperatures close to observations.
+Incoming radiation is prescribed using typical values for August in this region.  For incoming solar radiation ($S_{down}$), we use the average diurnal course of total solar radiation measured at an open meadow station at the Angelo Coast Range Reserve (ACRR) on August 15 of 2009-2011.  For downward longwave radiation ($L_{down}$), we use the GEWEX Surface Radiation Budget [Stackhouse \textit{et al.}, 2011 XXXX] mean diurnal pattern from the month of August (years 2003-2007) for the grid cell nearest the ACRR field site.  Shortwave albedo is set to 0.1 and longwave emissivity is set to 0.95 for both species in order to eliminate variation due to vegetation radiative properties (0.1 is the albedo and XX is the emissivity for broadleaf evergreen temperate trees in CLM [\cite{oleson2010technical}].)  Ground heat flux is set equal to 5\% of net radiation [\cite{ogee2001long}].  Aerodynamic resistance ($r_a$) is held constant at 10 s/m, which is a representative value for typical winds and near neutral conditions using Equation 14.33 from \cite{bonan}; this particular value was chosen to give surface and air temperatures close to observations.
 
 Given this predicted $E$, along with prescribed incoming radiation and aerodynamic resistance, the surface energy balance is solved for surface temperature ($T_s$, K) using the Newton-Raphson method and a timestep of 1 second, and $T_s$ is then used to calculate outgoing longwave radiation ($L_{up}$, W/m$^2$) and sensible heat flux ($H$, W/m$^2$).  Potential temperature $\Theta$ is adjusted for altitude to air temperature $T_a$ for calculating $H$ and $LE_t$ (VPD), using an altitude of 400 m and an adiabatic lapse rate of 10 K/km.  
 
