--- a/thesis.bib
+++ b/thesis.bib
@@ -146,6 +146,16 @@
 	Volume = {15},
 	Year = {1985}}
 
+@article{collatz1991physiological,
+	Author = {Collatz, G.J. and Ball, J.T. and Grivet, C. and Berry, J.A.},
+	Journal = {Agricultural and Forest Meteorology},
+	Number = {2},
+	Pages = {107--136},
+	Publisher = {Elsevier},
+	Title = {Physiological and environmental regulation of stomatal conductance, photosynthesis and transpiration: a model that includes a laminar boundary layer},
+	Volume = {54},
+	Year = {1991}}
+
 @article{constanz,
 	Author={Constantz, J. and Murphy, F.},
 	Journal={Journal of Hydrology},
@@ -435,18 +445,19 @@
 @article{patil,
 	Author={Patil, A. and Huard, D. and Fonnesbeck, C.~J.},
 	Journal={J. Stat. Software},
-	Number={35},
+	Volume={35},
 	Issue={4},
 	Title={{PyMC: Bayesian stochastic modelling in python}},
 	Pages={1--81},
 	Year={2010}}
 
-@incollection{raftery,
+@inproceedings{raftery,
 	Author={Raftery, A.~E. and Lewis,  S.~M.},
 	Title={The number of iterations, convergence diagnostics, and generic metropolis algorithms},
 	Booktitle={{Practical Markov Chain Monte Carlo}},
 	Year={1995},
-	Editor={Gilks, W.~R. and Spiegelhalter, D.~J. and Richardson, S.}}
+	Editor={Gilks, W.~R. and Spiegelhalter, D.~J. and Richardson, S.},
+	Publisher={Chapman and Hall}}
 	
 @inproceedings{rempe2010,
 	Author={Rempe, D. and Oshun, J. and Dietrich, W. and Salve, R. and Fung, I.},
@@ -645,6 +656,150 @@
 	Pages = {1346--1352},
 	Title = {Seasonal pattern of water depletion from soil--rock profiles in a {Mediterranean} climate in southwestern {Oregon}},
 	Year = {1996}}
+	
+	
+%%%%%%%% BL CHAPTER %%%%%%%%
+
+@article{baldocchi2000climate,
+	Author = {Baldocchi, Dennis and Kelliher, Francis M and Black, T Aet and Jarvis, Paul},
+	Journal = {Global Change Biology},
+	Number = {S1},
+	Pages = {69--83},
+	Publisher = {Wiley Online Library},
+	Title = {Climate and vegetation controls on boreal zone energy exchange},
+	Volume = {6},
+	Year = {2000}}
+
+@article{de2012modelled,
+	Author = {de Arellano, J.V.G. and van Heerwaarden, C.C. and Lelieveld, J.},
+	Journal = {Nature Geoscience},
+	Publisher = {Nature Publishing Group},
+	Title = {Modelled suppression of boundary-layer clouds by plants in a CO2-rich atmosphere},
+	Year = {2012}}
+
+@article{de2012determining,
+	Author = {de Noblet-Ducoudr{\'e}, Nathalie and Boisier, Juan-Pablo and Pitman, Andy and Bonan, GB and Brovkin, V and Cruz, Faye and Delire, C and Gayler, V and van den Hurk, BJJM and Lawrence, PJ and others},
+	Journal = {Journal of Climate},
+	Number = {9},
+	Pages = {3261--3281},
+	Title = {{Determining robust impacts of land-use-induced land cover changes on surface climate over North America and Eurasia: results from the first set of LUCID experiments}},
+	Volume = {25},
+	Year = {2012}}
+
+@article{durre2000dependence,
+	Author = {Durre, I. and Wallace, J.M. and Lettenmaier, D.P.},
+	Journal = {Journal of climate},
+	Number = {14},
+	Pages = {2641--2651},
+	Title = {Dependence of extreme daily maximum temperatures on antecedent soil moisture in the contiguous United States during summer},
+	Volume = {13},
+	Year = {2000}}
+
+@article{fischer2007soil,
+	Author = {Fischer, E.M. and Seneviratne, SI and Vidale, PL and L{\"u}thi, D. and Sch{\"a}r, C.},
+	Journal = {Journal of Climate},
+	Number = {20},
+	Pages = {5081--5099},
+	Title = {Soil moisture-atmosphere interactions during the 2003 European summer heat wave},
+	Volume = {20},
+	Year = {2007}}
+
+@article{hirschi2010observational,
+	Author = {Hirschi, Martin and Seneviratne, Sonia I and Alexandrov, Vesselin and Boberg, Fredrik and Boroneant, Constanta and Christensen, Ole B and Formayer, Herbert and Orlowsky, Boris and Stepanek, Petr},
+	Journal = {Nature Geoscience},
+	Number = {1},
+	Pages = {17--21},
+	Publisher = {Nature Publishing Group},
+	Title = {Observational evidence for soil-moisture impact on hot extremes in southeastern Europe},
+	Volume = {4},
+	Year = {2010}}
+
+@article{Juang:2007ve,
+	Author = {Juang, Jehn-Yih and Katul, Gabriel G. and Porporato, Amilcare and Stoy, Paul C. and Siqueira, Mario S. and Detto, Matteo and Kim, Hyun-Seok and Oren, Ram},
+	Journal = {Global Change Biology},
+	Number = {4},
+	Pages = {887-896},
+	Publisher = {BLACKWELL PUBLISHING},
+	Title = {Eco-hydrological controls on summertime convective rainfall triggers},
+	Volume = {13},
+	Year = {2007}}
+
+@article{Lee:2005kx,
+	Author = {Lee, JE and Oliveira, RS and Dawson, TE and Fung, I},
+	Journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	Number = {49},
+	Pages = {17576-17581},
+	Title = {Root functioning modifies seasonal climate},
+	Volume = {102},
+	Year = {2005}}
+
+@article{liu2005changes,
+	Author = {Liu, Heping and Randerson, James T and Lindfors, Jamie and Chapin, F Stuart},
+	Journal = {Journal of Geophysical Research: Atmospheres (1984--2012)},
+	Number = {D13},
+	Publisher = {Wiley Online Library},
+	Title = {Changes in the surface energy budget after fire in boreal ecosystems of interior Alaska: An annual perspective},
+	Volume = {110},
+	Year = {2005}}
+
+@article{lobell2008effect,
+	Author = {Lobell, David B and Bonfils, C{\'e}line},
+	Journal = {Journal of Climate},
+	Number = {10},
+	Pages = {2063--2071},
+	Title = {The effect of irrigation on regional temperatures: A spatial and temporal analysis of trends in California, 1934-2002},
+	Volume = {21},
+	Year = {2008}}
+
+@article{mueller2012hot,
+	Author = {Mueller, B. and Seneviratne, S.I.},
+	Journal = {Proceedings of the National Academy of Sciences},
+	Number = {31},
+	Pages = {12398--12403},
+	Publisher = {National Acad Sciences},
+	Title = {Hot days induced by precipitation deficits at the global scale},
+	Volume = {109},
+	Year = {2012}}
+
+@article{ogee2001long,
+	Author = {Og{\'e}e, J. and Lamaud, E. and Brunet, Y. and Berbigier, P. and Bonnefond, JM},
+	Journal = {Agricultural and Forest Meteorology},
+	Number = {3},
+	Pages = {173--186},
+	Publisher = {Elsevier},
+	Title = {A long-term study of soil heat flux under a forest canopy},
+	Volume = {106},
+	Year = {2001}}
+
+@article{seneviratne2010investigating,
+	Author = {Seneviratne, Sonia I and Corti, Thierry and Davin, Edouard L and Hirschi, Martin and Jaeger, Eric B and Lehner, Irene and Orlowsky, Boris and Teuling, Adriaan J},
+	Journal = {Earth-Science Reviews},
+	Number = {3},
+	Pages = {125--161},
+	Publisher = {Elsevier},
+	Title = {Investigating soil moisture--climate interactions in a changing climate: a review},
+	Volume = {99},
+	Year = {2010}}
+
+@article{Siqueira:2009qf,
+	Author = {Siqueira, Mario and Katul, Gabriel and Porporato, Amilcare},
+	Journal = {Journal of Hydrometeorology},
+	Number = {1},
+	Pages = {96-112},
+	Publisher = {AMER METEOROLOGICAL SOC},
+	Title = {Soil Moisture Feedbacks on Convection Triggers: The Role of Soil-Plant Hydrodynamics},
+	Volume = {10},
+	Year = {2009}}
+
+@article{tennekes1981basic,
+	Author = {Tennekes, H. and Driedonks, AGM},
+	Journal = {Boundary-Layer Meteorology},
+	Number = {4},
+	Pages = {515--531},
+	Publisher = {Springer},
+	Title = {Basic entrainment equations for the atmospheric boundary layer},
+	Volume = {20},
+	Year = {1981}}
 
 
 %%%%%%%% WIND CHAPTER %%%%%%%%
